package newmyshopping;

/**
 * &#064;program:
 * &#064;description:
 * &#064;author:XieMu
 * &#064;create:  -11-29 22:42
 *
 * @author GK_L2
 */
public class Manager {
        /**
         * 设置默认的用户名和密码
         *
         */
        public Manager() {
            username = "itcast";
            password = "itcast";
        }
        
        /**
         * ====================定义该类所拥有的变量====================
         */
        public String username;		// 用户名
        public String password;		// 密码
    }

